rust_writer_proc/tests/ui/mutator_fails_if_local_implementor_not_visit_mut.stderr
error[E0599]: no method named `visit_file_mut` found for struct `SomeImplementor` in the current scope
  --> tests/ui/mutator_fails_if_local_implementor_not_visit_mut.rs:12:1
   |
8  | struct SomeImplementor {
   | ---------------------- method `visit_file_mut` not found for this struct
...
12 | #[mutator(local = SomeImplementor, rust_writer::ast::implementors::ItemToImpl<'a>)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SomeImplementor`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `visit_file_mut`, perhaps you need to implement it:
           candidate #1: `VisitMut`
   = note: this error originates in the attribute macro `mutator` (in Nightly builds, run with -Z macro-backtrace for more info)
